--- a/Data_Types_Assignment3.ipynb
+++ b/Data_Types_Assignment3.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPllfxyfM438l/GaiaVVI3z",
+      "authorship_tag": "ABX9TyOYinnR65ljVrc7hofeAAks",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -111,7 +111,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Negative floats are always rounded UP to the closest integer (for instance, both -1.1 and -1.9 are rounded up to -1). Positive floats are always rounded DOWN to the closest integer (for instance, 2.1 and 2.9 are rounded down to 2)."
+        "1. Negative floats are always rounded UP to the closest integer (for instance, both -1.1 and -1.9 are rounded up to -1).\n",
+        "2. Positive floats are always rounded DOWN to the closest integer (for instance, 2.1 and 2.9 are rounded down to 2)."
       ],
       "metadata": {
         "id": "_87Jjfce06mB"
