--- a/Functions_assignment2.ipynb
+++ b/Functions_assignment2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP0gQw2Zw4/RNYX79zWXLL4",
+      "authorship_tag": "ABX9TyPJU2aFqM+7opmegg/gDqhJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,16 +29,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Question 1**"
-      ],
-      "metadata": {
-        "id": "1peQSTKRj9AC"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "**Predicting the price of a house**"
+        "# Question 1\n",
+        "## Predicting the price of a house"
       ],
       "metadata": {
         "id": "8WjAd8tbgmes"
@@ -47,33 +39,13 @@
     {
       "cell_type": "markdown",
       "source": [
-        "First we create a function get_expected_cost(), that has two arguments *beds* and *baths*."
+        "1. First we create a function get_expected_cost(), that has two arguments *beds* and *baths*.\n",
+        "2. We create a variable **value** thats holds the calculation of the total house pricing.\n",
+        "return value\n",
+        "3. create a variable house_price that holds the call fuction and then print the price of the house"
       ],
       "metadata": {
         "id": "8Oway1U7g7OF"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "We create a variable **value** thats holds the calculation of the total house pricing.\n",
-        "return value\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n"
-      ],
-      "metadata": {
-        "id": "RrW7qytOhnxd"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "create a variable house_price that holds the call fuction and then print the price of the house"
-      ],
-      "metadata": {
-        "id": "ciJF0ZLbjbAZ"
       }
     },
     {
